tests/fixtures/errors/release_top_level.z
# E0200: cannot release a top-level definition.
foo: function is {}
main: function is {
    foo.release
}
